Add possibility to filter recipes by Meal Type (service, view, test).